--- a/resume/index.html
+++ b/resume/index.html
@@ -189,7 +189,7 @@
                                         테이블을 구성할지 고민했습니다.
                                     </p>
                                     <p>
-                                        프라이머리 키를 잘 선택해야함을 몸소 느꼈고, 적절히 복합키를 선택했습니다. 인덱싱을 활용하여 자주 조회하는 컬럼에 대한 검색 속도를 높였습니다.
+                                        기본 키를 잘 선택해야함을 느꼈고, 적절히 복합키를 선택했습니다. 인덱싱을 활용하여 자주 조회하는 컬럼에 대한 검색 속도를 높였습니다.
                                     </p>
                                     <p>
                                         API를 설계하는 과정에서 어떤 종류의 데이터를 주고받아야 하는지 고민했고,
