--- a/resume/index.html
+++ b/resume/index.html
@@ -25,7 +25,10 @@
                         <div>
                             <p>
                                 저는 끈기를 가지고 문제를 해결하기 위해 도전하는 개발자 기진석입니다. 
+                            <p>
                                 문제를 정의하고 해결해 나가는 과정에서 즐거움을 느끼고 새로운 도구가 필요하다면 공식 문서를 읽고 스스로 학습해서 적용할 수 있습니다. 
+                            </p>
+                            <p>
                                 일상 생활에서 접하는 기능들이 어떻게 구현됐을지 호기심을 가지고 관련된 정보를 찾아보며 직접 구현해보는 것을 좋아합니다.
                             </p>
                         </div>
@@ -196,7 +199,7 @@
                                         서버와 사용자 화면의 데이터 일관성 문제에 대해 고민했습니다.
                                     </p>
                                     <p>
-                                        외관적으로 버튼 하나를 추가하는 것은 단순하지만, 그 안에서 꽤 많은 종류의 데이터가 오가고
+                                        외관상 버튼 하나를 추가하는 것은 단순하지만, 그 안에서 꽤 많은 종류의 데이터가 오가고
                                         생각해보아야 할 점이 많다는 걸 느끼게 됐습니다.
                                     </p>
                                 </div>
