--- a/resume/index.html
+++ b/resume/index.html
@@ -57,7 +57,7 @@
                                 </li>
                                 <li class="grid-col-3-inner">
                                     <div class="flex-row">
-                                        <img src="./image/css.png" class="icons" alt="css">
+                                        <img src="./image/css.png" class="icons" alt="CSS">
                                     </div>
                                     <h4>CSS</h4>
                                     <ul>
@@ -73,10 +73,13 @@
                                     <h4>Javascript </h4>
                                     <ul>
                                         <li>
-                                            비동기 처리
+                                            Node.js - Express
                                         </li>
                                         <li>
-                                            Node.js - Express
+                                            React
+                                        </li>
+                                        <li>
+                                            Typescript
                                         </li>
                                         <li>
                                             Next.js
@@ -85,7 +88,21 @@
                                 </li>
                                 <li class="grid-col-3-inner">
                                     <div class="flex-row">
-                                        <img src="./image/python.png" class="icons" alt="Next.js">
+                                        <img src="./image/java.png" class="icons" alt="JAVA">
+                                    </div>
+                                    <h4>JAVA</h4>
+                                    <ul>
+                                        <li>
+                                            OOP에 대한 기본적인 이해
+                                        </li>
+                                        <li>
+                                            Spring
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="grid-col-3-inner">
+                                    <div class="flex-row">
+                                        <img src="./image/python.png" class="icons" alt="python">
                                     </div>
                                     <h4>Python</h4>
                                     <ul>
@@ -297,6 +314,9 @@
                                     </li>
                                     <li>
                                         Next.js, Vercel 을 통해 블로그를 게시했습니다. 
+                                    </li>
+                                    <li>
+                                        Typescript 를 활용했습니다.
                                     </li>
                                 </ul>
                                 <ul class="flex-col">
