--- a/resume/index.html
+++ b/resume/index.html
@@ -86,7 +86,7 @@
                                         </li>
                                     </ul>
                                 </li>
-<!--                                 <li class="grid-col-3-inner">
+                                 <li class="grid-col-3-inner">
                                     <div class="flex-row">
                                         <img src="./image/java.png" class="icons" alt="JAVA">
                                     </div>
@@ -96,7 +96,7 @@
                                             OOP에 대한 기본적인 이해
                                         </li>
                                     </ul>
-                                </li> -->
+                                </li>
                                 <li class="grid-col-3-inner">
                                     <div class="flex-row">
                                         <img src="./image/python.png" class="icons" alt="python">
