--- a/resume/index.html
+++ b/resume/index.html
@@ -28,7 +28,7 @@
                                 <p>
                                     [개인 프로젝트]
                                 </p>
-                                <a href="https://github.com/kijindori/platformer" class="link" >
+                                <a href="https://github.com/d-w-b/platformer" class="link" >
                                     <img src="./image/github.png" alt="Github" class="icons">
                                     소스코드
                                 </a>
@@ -83,7 +83,7 @@
                                     <p>
                                         [4인 팀프로젝트]
                                     </p>
-                                    <a href="https://github.com/kijindori/watchmark" class="link" >
+                                    <a href="https://github.com/d-w-b/watchmark" class="link" >
                                         <img src="./image/github.png" alt="Github" class="icons">
                                         소스코드
                                     </a>
