--- a/resume/index.html
+++ b/resume/index.html
@@ -34,19 +34,27 @@
                                 </a>
                                 <ul class="indented">
                                     <p>
-                                        <strong>C++ / Win32 API</strong>
+                                        <strong>개발 환경</strong>
                                     </p>
                                     <p>
-                                        마우스 및 키보드 입력을 처리하여 캐릭터를 이동하거나 상태를 갱신하도록 했습니다.
+                                        <strong>C++ / Win32 API / </strong>
+                                        <strong>Visual Studio 2022</strong>
                                     </p>
                                     <p>
-                                        서버를 통해 갱신된 캐릭터의 위치나 상태를 동기화하도록 했습니다.
-                                        IOCP를 통해 비동기 I/O를 처리했고, 
-                                        멀티 스레드 환경에서 임계 영역을 통한 동기화를 경험했습니다.
+                                        <strong>소개</strong>
                                     </p>
                                     <p>
-                                        힙에 할당된 메모리를 해제할 시점을 선택하거나 오류가 나지 않는 상황에서 해결해야할 문제가 생길 때, 수정하는 것이 난감했는데 그 과정에서
-                                        깔끔한 구조의 중요성과 프로그램의 동작 과정을 잘 추적할 수 있는 능력의 필요성을 체감했습니다.
+                                        TCP/IP 소켓 프로그래밍을 통해서 클라이언트와 서버가 통신하여 플레이어의 위치를 여러 클라이언트 간에 동기화하도록 했습니다.
+                                    </p>
+                                    <p>
+                                        이 과정에서 멀티 스레드 환경에서 임계 영역을 통해 동기화를 했고,
+                                        윈도우 OS 가 제공하는 비동기 입출력 처리 API를 활용했습니다.
+                                    </p>
+                                    <p>
+                                        충돌 처리, 키보드 입력 처리, 플레이어 등 기능별로 클래스를 만들었습니다.
+                                    </p>
+                                    <p>
+                                        기능을 나누고, 기능별 클래스에 수정 사항이 생겨도 유지보수가 용이하도록 구조를 간결하게 하고자 노력했습니다.
                                     </p>
                                 </ul>
                             </div>
@@ -78,7 +86,11 @@
                          
                                 <div class="indented">
                                     <p>
-                                        <strong>HTML / CSS / JavaScript / Chrome Extension API </strong>
+                                        <strong>개발 환경</strong>
+                                    </p>
+                                    <p>
+                                        <strong>HTML / CSS / JavaScript / </strong>
+                                        <strong>크롬 확장프로그램 API </strong>
                                     </p>
                                     <p>
                                         [4인 팀프로젝트]
@@ -88,6 +100,9 @@
                                         소스코드
                                     </a>
                                     <p>
+                                        <strong>소개</strong>
+                                    </p>
+                                    <p>
                                         여러 OTT 콘텐츠를 각 플랫폼에서 접근하는게 불편하여 한 곳에서 접근하기 위해 개발했습니다.
                                     </p>
                                     <p>
@@ -96,6 +111,12 @@
                                     </p>
                                     <p>
                                         찜한 콘텐츠의 정보를 서버DB에 저장하고 불러올 수 있도록 했고, 팝업창에서 사용자의 콘텐츠 목록을 조회하도록 했습니다.
+                                    </p>
+                                    <p>
+                                        DB 서버는 NodeJS 로 구현했고, 사용자 화면은 HTML, CSS, JavaScript를 통해 구현했습니다.
+                                    </p>
+                                    <p>
+                                        로그인 기능을 구현하고, 비밀번호를 암호화해서 저장했으며 각 유저별로 찜한 목록을 만들기 위해 테이블을 설계하고 프론트엔드에서 각 유저별 정보를 불러와서 화면에 표현했습니다.
                                     </p>
                                     
                                 </div>
