--- a/resume/index.html
+++ b/resume/index.html
@@ -63,6 +63,51 @@
                     </div>
                     <div class="flex-center"> 
                         <div class="h3">
+                            <h2>독서동아리지원센터 홈페이지 클론코딩</h2>
+                        </div>
+                        <div class="grid">
+                            <div class="img_container">
+                                <div>
+                                    <img class="ld" src="./image/jquery.png" alt="platformer">
+                                    <img class="md" src="./image/jquery.png" alt="platformer">
+                                </div>
+                            </div>
+                            <div>
+                                <p>
+                                    [개인 프로젝트]
+                                </p>
+                                <div>
+                                    <a href="https://github.com/d-w-b/interactive/tree/main/code/jquery/01" class="link" >
+                                        <img src="./image/github.png" alt="Github" class="icons">
+                                        소스코드
+                                    </a>
+                                    <a href="https://d-w-b.github.io/interactive/01/" class="link">
+                                        페이지 보기
+                                    </a>
+                                </div>
+                                <ul class="indented">
+                                    <p>
+                                        <strong>개발 환경</strong>
+                                    </p>
+                                    <p>
+                                        <strong>jQuery / JavaScript / HTML / CSS </strong>
+                                    </p>
+                                    <p>
+                                        <strong>소개</strong>
+                                    </p>
+                                    <p>
+                                        독서동아리지원센터의 홈페이지 클론코딩
+                                    </p>
+                                    <p>
+                                        JavaScript와 jQuery 라이브러리를 활용하여 슬라이드 및 UI 이동 구현
+                                    </p>
+                                </ul>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <div class="flex-center"> 
+                        <div class="h3">
                             <h2>
                                 콘텐츠 관리 크롬 확장 프로그램
                             </h2>
